# simple-volume

./: .gitignore  CMakeLists.txt  README.md  config.h.in  main.cpp  main.cu  mse.cpp  render.cu  render.h
data/: bunny_cloud_dt.toml  bunny_cloud_mis.toml  bunny_cloud_ref.toml  bunny_cloud_rt.toml  smoke.blend  smoke.blend1  smoke2_dt.toml  smoke2_mis.toml  smoke2_ref.toml  smoke2_rt.toml  smoke2_spec.toml  smoke2_spec_mis.toml  smoke2_spec_ref.toml
